crates/analyzer/tests/snapshots/errors__mismatch_return_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: expected function to return `address` but was `u256`
  ┌─ compile_errors/mismatch_return_type.fe:4:9
  │
4 │         return 1
  │         ^^^^^^^^


