crates/analyzer/tests/snapshots/errors__missing_return_in_else.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: function body is missing a return or revert statement
  ┌─ compile_errors/missing_return_in_else.fe:2:13
  │
2 │     pub def bar(val: u256) -> u256:
  │             ^^^               ---- expected function to return `u256`
  │             │                  
  │             all paths of this function must `return` or `revert`

error: cannot find value `x` in this scope
  ┌─ compile_errors/missing_return_in_else.fe:6:13
  │
6 │             x = 1
  │             ^ undefined


