crates/analyzer/tests/snapshots/errors__missing_self.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: `self` is not defined
  ┌─ compile_errors/missing_self.fe:3:9
  │
3 │         self.mut_fn()
  │         ^^^^ undefined value
  │
  = add `self` to the scope by including it in the function signature
  = Example: `fn pure_fn(self, foo: bool)`

error: `self` is not defined
   ┌─ compile_errors/missing_self.fe:12:16
   │
12 │         return self.x
   │                ^^^^ undefined value
   │
   = add `self` to the scope by including it in the function signature
   = Example: `fn f(self, foo: bool)`


