crates/analyzer/tests/snapshots/errors__module_const_unknown_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: undefined type
  ┌─ compile_errors/module_const_unknown_type.fe:1:12
  │
1 │ const FOO: Bar = 1
  │            ^^^ this type name has not been defined


